Kernel: Add error management interfaces to the Kernel
Add manager interface, error interface and error type enum.

--- a/openvibe/doc/Groups.dox
+++ b/openvibe/doc/Groups.dox
@@ -22,6 +22,11 @@
  */
 
 /**
+ * \defgroup Group_Error Error management
+ * \ingroup Group_Error
+ */
+
+/**
  * \defgroup Group_Player Scenario playback
  * \ingroup Group_Kernel
  */
