Fix: Coding Rules Constraints Violation (name, const and uniformization)

--- a/modules/ebml/doc/FormatingEBMLStreams.dox
+++ b/modules/ebml/doc/FormatingEBMLStreams.dox
@@ -63,9 +63,9 @@
  *   {
  *     if(m_pFile) fclose(m_pFile);
  *   }
- *   virtual void write(const void* pBuffer, const uint64_t ui64BufferSize)
+ *   virtual void write(const void* pBuffer, const uint64_t size)
  *   {
- *     if(m_pFile) fwrite(pBuffer, ui64BufferSize, 1, m_pFile);
+ *     if(m_pFile) fwrite(pBuffer, size, 1, m_pFile);
  *   }
  *   FILE* m_pFile;
  * };
