--- a/modules/ebml/doc/FormatingEBMLStreams.dox
+++ b/modules/ebml/doc/FormatingEBMLStreams.dox
@@ -55,19 +55,10 @@
  * class CWriterCallback : public EBML::IWriterCallback
  * {
  * public:
- *   CWriterCallback(char* filename)
- *   {
- *     m_pFile=fopen(filename, "wb");
- *   }
- *   virtual ~CWriterCallback()
- *   {
- *     if(m_pFile) fclose(m_pFile);
- *   }
- *   virtual void write(const void* buffer, const size_t size)
- *   {
- *     if(m_pFile) fwrite(buffer, size, 1, m_pFile);
- *   }
- *   FILE* m_pFile;
+ *   CWriterCallback(char* filename) { m_file=fopen(filename, "wb"); }
+ *   virtual ~CWriterCallback() { if(m_file) fclose(m_file); }
+ *   virtual void write(const void* buffer, const size_t size) { if(m_file) fwrite(buffer, size, 1, m_file); }
+ *   FILE* m_file;
  * };
  * \endcode
  *
