Step Some not so Safe

--- a/openvibe/doc/Groups.dox
+++ b/openvibe/doc/Groups.dox
@@ -12,7 +12,7 @@
  */
 
 /**
- * \defgroup Group_Configuration Configuration management
+ * \defgroup Group_Config Configuration management
  * \ingroup Group_Kernel
  */
 
